--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         /* Base Options: */
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "target": "es2022",
+        "target": "ESNext",
         "allowJs": true,
         "resolveJsonModule": true,
         "moduleDetection": "force",
@@ -19,13 +19,13 @@
         /* AND if you're building for a library: */
         "declaration": true,
         /* If your code doesn't run in the DOM: */
-        "lib": ["es2022"],
+        "lib": ["ESNext"],
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"],
             "@pyyupsk/messenger-webhooks": ["src/index.ts"] // This is for the dev server
         }
     },
-    "include": ["src/**/*.ts", "dev/**/*.ts", "tsup.config.ts"],
+    "include": ["src/**/*.ts", "dev/**/*.ts", "__tests__/**/*.ts", "tsup.config.ts"],
     "exclude": ["node_modules", "dist"]
 }
