--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "dependencies": {
         "body-parser": "^1.20.2",
         "chalk": "^5.3.0",
-        "express": "^4.19.2",
-        "undici": "^6.19.8"
+        "express": "^4.19.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
