chore: remove Vitest from project dependencies
- Removed Vitest from package.json scripts and dependencies.
- Updated pnpm-lock.yaml accordingly.
- Cleaned up the 	est script and modified the lint command.

This simplifies the project by removing unnecessary testing dependencies.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
         "format:fix": "prettier --write . --list-different",
         "knip": "knip",
         "knip:fix": "knip --fix",
-        "lint": "eslint src",
-        "test": "vitest"
+        "lint": "eslint src"
     },
     "dependencies": {
         "chalk": "^5.3.0",
@@ -39,7 +38,6 @@
         "prettier-plugin-pkg": "^0.18.1",
         "tsup": "^8.2.4",
         "typescript": "^5.5.4",
-        "typescript-eslint": "^8.4.0",
-        "vitest": "^2.0.5"
+        "typescript-eslint": "^8.4.0"
     }
 }
