--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
         "format:fix": "prettier --write . --list-different",
         "knip": "knip",
         "knip:fix": "knip --fix",
-        "lint": "eslint src"
+        "lint": "eslint src",
+        "prepare": "husky"
     },
     "dependencies": {
         "chalk": "^5.3.0",
         "express": "^4.19.2"
     },
     "devDependencies": {
+        "@commitlint/cli": "^19.4.1",
+        "@commitlint/config-conventional": "^19.4.1",
         "@eslint/js": "^9.9.1",
         "@types/express": "^4.17.21",
         "@types/node": "^22.5.2",
@@ -33,7 +36,9 @@
         "eslint-plugin-perfectionist": "^3.3.0",
         "eslint-plugin-prettier": "^5.2.1",
         "globals": "^15.9.0",
+        "husky": "^9.1.5",
         "knip": "^5.29.1",
+        "lint-staged": "^15.2.10",
         "prettier": "^3.3.3",
         "prettier-plugin-pkg": "^0.18.1",
         "tsup": "^8.2.4",
