--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "knip": "knip",
         "knip:fix": "knip --fix",
         "lint": "eslint src",
-        "prepare": "husky"
+        "prepare": "husky",
+        "test": ""
     },
     "dependencies": {
         "chalk": "^5.3.0",
