--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "knip:fix": "knip --fix",
         "lint": "eslint src",
         "prepare": "husky",
-        "test": ""
+        "test": "vitest"
     },
     "dependencies": {
         "chalk": "^5.3.0",
@@ -44,6 +44,7 @@
         "prettier-plugin-pkg": "^0.18.1",
         "tsup": "^8.2.4",
         "typescript": "^5.5.4",
-        "typescript-eslint": "^8.4.0"
+        "typescript-eslint": "^8.4.0",
+        "vitest": "^2.0.5"
     }
 }
