chore: remove .npmrc and update tsconfig.json
- Deleted .npmrc file as it is no longer needed.
- Updated tsconfig.json to include files from the examples directory.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
             "@/*": ["src/*"]
         }
     },
-    "include": ["src/**/*.ts", "dev/**/*.ts", "__tests__/**/*.ts", "tsup.config.ts"],
+    "include": [
+        "src/**/*.ts",
+        "examples/**/*.ts",
+        "dev/**/*.ts",
+        "__tests__/**/*.ts",
+        "tsup.config.ts"
+    ],
     "exclude": ["node_modules", "dist"]
 }
