refactor(monorepo): restructure project to monorepo layout
- Moved project into a monorepo structure with separate packages.
- Renamed and reorganized files under packages/ for better modularity.
- Deleted the xamples/weather-bot files.
- Added pnpm-workspace.yaml and 	urbo.json for workspace management.
- Updated GitHub Actions workflow, .gitignore, and config files to reflect new structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ⚙️ Test
+name: ⚙️ CI
 on:
   push:
     branches:
@@ -22,8 +22,8 @@ jobs:
       - name: 🔍 Install dependencies
         run: pnpm install --frozen-lockfile
       - name: 🧹 Lint
-        run: pnpm lint
+        run: pnpm lint --filter=@pyyupsk/messenger-webhooks
       - name: 🏗️ Build
-        run: pnpm build
+        run: pnpm build --filter=@pyyupsk/messenger-webhooks
       - name: 🧪 Test
-        run: pnpm test
+        run: pnpm test --filter=@pyyupsk/messenger-webhooks
