--- a/package.json
+++ b/package.json
@@ -1,51 +1,31 @@
 {
     "name": "@pyyupsk/messenger-webhooks",
     "version": "1.0.0",
-    "type": "module",
-    "description": "A simple and easy-to-use library for building Facebook Messenger bots with webhooks.",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/pyyupsk/messenger-webhooks.git"
+    "private": true,
+    "workspaces": [
+        "packages/*",
+        "examples/*"
+    ],
+    "packageManager": "pnpm@9.9.0",
+    "engines": {
+        "node": ">=20"
     },
-    "author": "pyyupsk <pyyupsk@proton.me>",
-    "license": "MIT",
-    "main": "dist/index.js",
-    "module": "dist/index.mjs",
-    "types": "dist/index.d.ts",
     "scripts": {
-        "build": "tsup",
-        "format": "prettier --write .",
+        "build": "turbo build",
+        "dev": "turbo dev",
+        "format": "prettier --check .",
         "format:fix": "prettier --write . --list-different",
-        "knip": "knip",
-        "knip:fix": "knip --fix",
-        "lint": "eslint src",
-        "prepare": "husky",
-        "test": "vitest"
-    },
-    "dependencies": {
-        "chalk": "^5.3.0",
-        "express": "^4.19.2"
+        "lint": "turbo lint",
+        "release": "pnpm changeset publish --filter=@pyyupsk/messenger-webhooks",
+        "test": "pnpm test --filter=@pyyupsk/messenger-webhooks"
     },
     "devDependencies": {
         "@changesets/cli": "^2.27.8",
-        "@commitlint/cli": "^19.4.1",
-        "@commitlint/config-conventional": "^19.4.1",
-        "@eslint/js": "^9.9.1",
-        "@types/express": "^4.17.21",
-        "@types/node": "^22.5.2",
+        "@types/node": "^22.5.4",
         "eslint": "^9.9.1",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-perfectionist": "^3.3.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "globals": "^15.9.0",
-        "husky": "^9.1.5",
-        "knip": "^5.29.1",
-        "lint-staged": "^15.2.10",
         "prettier": "^3.3.3",
         "prettier-plugin-pkg": "^0.18.1",
-        "tsup": "^8.2.4",
-        "typescript": "^5.5.4",
-        "typescript-eslint": "^8.4.0",
-        "vitest": "^2.0.5"
+        "turbo": "^2.1.1",
+        "typescript": "^5.5.4"
     }
 }
