chore: update project configs and fix logger usage
- Updated knip.json to support monorepo workspace structure.
- Added commitlint and husky setup in package.json.
- Updated eslint and TypeScript configurations in messenger-webhooks package.
- Fixed logger usage in bot.ts and bot.test.ts to prevent thrown errors.
- Modified pnpm-lock.yaml and turbo.json to align with the monorepo setup.

--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
         "format": "prettier --check .",
         "format:fix": "prettier --write . --list-different",
         "lint": "turbo lint",
+        "prepare": "husky",
         "release": "pnpm changeset publish --filter=@pyyupsk/messenger-webhooks",
         "test": "pnpm test --filter=@pyyupsk/messenger-webhooks"
     },
     "devDependencies": {
         "@changesets/cli": "^2.27.8",
+        "@commitlint/cli": "^19.4.1",
+        "@commitlint/config-conventional": "^19.4.1",
         "@types/node": "^22.5.4",
         "eslint": "^9.9.1",
+        "husky": "^9.1.5",
+        "knip": "^5.29.2",
+        "lint-staged": "^15.2.10",
         "prettier": "^3.3.3",
         "prettier-plugin-pkg": "^0.18.1",
         "turbo": "^2.1.1",
