--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,14 +6,12 @@
     "files": [
         "base.js"
     ],
-    "dependencies": {
-        "eslint-config-turbo": "^2.1.1"
-    },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-perfectionist": "^3.3.0",
         "eslint-plugin-prettier": "^5.2.1",
-        "globals": "^15.9.0"
+        "globals": "^15.9.0",
+        "typescript-eslint": "^8.4.0"
     }
 }
