--- a/packages/messenger-webhooks/package.json
+++ b/packages/messenger-webhooks/package.json
@@ -15,6 +15,7 @@
     "scripts": {
         "build": "tsup",
         "lint": "eslint src",
+        "lint:fix": "eslint --fix src",
         "test": "vitest"
     },
     "dependencies": {
@@ -22,13 +23,11 @@
         "express": "^4.19.2"
     },
     "devDependencies": {
-        "@eslint/eslintrc": "^3.1.0",
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
         "@types/express": "^4.17.21",
         "tsup": "^8.2.4",
         "typescript": "^5.5.4",
-        "typescript-eslint": "^8.4.0",
         "vitest": "^2.0.5"
     }
 }
