--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: pnpm/action-setup@v4
         name: 🛠️ Setup pnpm
         with:
-          version: latest
+          version: 9.9.0
       - uses: actions/setup-node@v4
         name: 📦 Setup Node.js
         with:
