feat(examples): add weather bot example using messenger-webhooks
- Added a simple weather bot example using @pyyupsk/messenger-webhooks.
- The bot responds to user messages with weather information for a specified city.
- Implemented weatherService with xios to fetch weather data from the Popcat API.
- Includes README with setup instructions and package.json for project dependencies.
- Added basic TypeScript configuration for the example app.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
 packages:
     # Include all packages in the 'packages' directory
     - 'packages/*'
-    # Include all packages in the 'examples' directory
-    - 'examples/*'
+    # Include all packages in the 'apps' directory
+    - 'apps/*'
