--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "tsc",
         "dev": "tsx watch src/index.ts",
+        "prebuild": "rimraf dist",
         "start": "node dist/index.js"
     },
     "dependencies": {
@@ -16,6 +17,7 @@
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.5.4",
+        "rimraf": "^6.0.1",
         "tsx": "^4.19.0",
         "typescript": "^5.5.4"
     }
