--- a/turbo.json
+++ b/turbo.json
@@ -4,11 +4,9 @@
     "tasks": {
         "build": {
             "dependsOn": ["^build"],
-            "outputs": ["dist/**"]
+            "outputs": [".next/**", "!.next/cache/**", "dist/**"]
         },
-        "lint": {
-            "dependsOn": ["^lint"]
-        },
+        "lint": {},
         "dev": {
             "cache": false,
             "persistent": true
