--- a/packages/messenger-webhooks/package.json
+++ b/packages/messenger-webhooks/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pyyupsk/messenger-webhooks",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "type": "module",
     "description": "A simple and easy-to-use library for building Facebook Messenger bots with webhooks.",
     "repository": {
@@ -12,7 +12,14 @@
     "author": "pyyupsk <pyyupsk@proton.me>",
     "license": "MIT",
     "main": "dist/index.js",
-    "module": "dist/index.mjs",
+    "module": "dist/index.js",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsup",
