fix: resolve issues with module usage in JavaScript without type: module
- Corrected package.json exports for better CommonJS and ESM support.
- Refactored folder structure for buttons and templates in 'messaging'.
- Fixed import paths and updated related tests.

version 1.1.2

--- a/packages/messenger-webhooks/tsconfig.json
+++ b/packages/messenger-webhooks/tsconfig.json
@@ -8,10 +8,18 @@
         "lib": ["ESNext"],
         "baseUrl": ".",
         "paths": {
-            "@/*": ["src/*"],
-            "@lib": ["./dist"]
+            "@/*": ["src/*"]
         }
     },
-    "include": ["src/**/*.ts", "__tests__/**/*.ts", "tsup.config.ts"],
+    "include": [
+        "src/**/*.ts",
+        "__tests__/**/*.ts",
+        "tsup.config.ts",
+        "../tests/bot.test.ts",
+        "../tests/button-template.test.ts",
+        "../tests/button.test.ts",
+        "../tests/generic-template.test.ts",
+        "../tests/media-template.test.ts"
+    ],
     "exclude": ["node_modules", "dist"]
 }
