--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "examples",
+    "name": "@repo/examples",
     "version": "1.1.1",
     "description": "A simple weather bot using @pyyupsk/messenger-webhooks",
     "main": "dist/index.js",
