--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@pyyupsk/messenger-webhooks",
+    "name": "@repo/root",
     "version": "1.1.1",
     "workspaces": [
         "packages/*",
@@ -17,7 +17,8 @@
         "lint": "turbo lint",
         "prepare": "husky",
         "release": "pnpm changeset publish --filter=@pyyupsk/messenger-webhooks",
-        "test": "pnpm test --filter=@pyyupsk/messenger-webhooks"
+        "start": "turbo start",
+        "test": "pnpm test --filter=@repo/tests"
     },
     "devDependencies": {
         "@changesets/cli": "^2.27.8",
