--- a/packages/messenger-webhooks/package.json
+++ b/packages/messenger-webhooks/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pyyupsk/messenger-webhooks",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "type": "module",
     "description": "A simple and easy-to-use library for building Facebook Messenger bots with webhooks.",
     "repository": {
@@ -11,23 +11,20 @@
     "bugs": "https://github.com/pyyupsk/messenger-webhooks/issues",
     "author": "pyyupsk <pyyupsk@proton.me>",
     "license": "MIT",
-    "main": "dist/index.js",
-    "module": "dist/index.js",
+    "main": "./dist/index.cjs",
+    "module": "./dist/index.js",
     "exports": {
         ".": {
             "import": "./dist/index.js",
-            "require": "./dist/index.cjs",
-            "types": "./dist/index.d.ts"
+            "require": "./dist/index.cjs"
         }
     },
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsup",
-        "lint": "eslint src",
-        "test": "vitest"
+        "lint": "eslint src"
     },
     "dependencies": {
-        "chalk": "^5.3.0",
         "express": "^4.19.2"
     },
     "devDependencies": {
@@ -35,7 +32,6 @@
         "@repo/typescript-config": "workspace:*",
         "@types/express": "^4.17.21",
         "tsup": "^8.2.4",
-        "typescript": "^5.5.4",
-        "vitest": "^2.0.5"
+        "typescript": "^5.5.4"
     }
 }
