--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -13,6 +13,12 @@
             "options": {
                 "tabWidth": 2
             }
+        },
+        {
+            "files": "*.{md,mdx}",
+            "options": {
+                "tabWidth": 2
+            }
         }
     ]
 }
