--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -17,7 +17,11 @@
         {
             "files": "*.{md,mdx}",
             "options": {
-                "tabWidth": 2
+                "tabWidth": 2,
+                "endOfLine": "auto",
+                "proseWrap": "always",
+                "embeddedLanguageFormatting": "auto",
+                "printWidth": 80
             }
         }
     ]
